--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 altgraph==0.17.5
+chlorophyll==0.4.2
 customtkinter==5.2.2
 darkdetect==0.8.0
 numpy==2.4.2
@@ -9,3 +10,4 @@ pyinstaller-hooks-contrib==2026.0
 pywin32-ctypes==0.2.3
 setuptools==81.0.0
 sly==0.5
+tktermwidget
